<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.Home_fragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/drop_the_link"
                android:fontFamily="@font/robotoslab_bold"
                android:textSize="18sp"
                android:gravity="center"
                style="@style/custom_textview"
                android:layout_marginTop="25dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView3">

                <ImageButton
                    android:id="@+id/app_c_button"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/search_btn"
                    android:src="@drawable/baseline_search_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ContentDescription,SpeakableTextPresentCheck" />

                <EditText
                    android:id="@+id/editTextText"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="10dp"
                    android:autofillHints=""
                    android:background="@drawable/selected_item"
                    android:ems="10"
                    android:fontFamily="@font/robotoslab_bold"
                    android:inputType="text"
                    android:padding="15dp"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toStartOf="@id/app_c_button"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:ignore="LabelFor,MissingConstraints,SpeakableTextPresentCheck,VisualLintTextFieldSize" />
                
            </androidx.constraintlayout.widget.ConstraintLayout>

            <ImageView
                android:id="@+id/imageView"
                android:layout_marginTop="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/baseline_security_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraint"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_height="wrap_content"
                android:text="@string/video_title"
                android:layout_marginTop="25dp"
                style="@style/custom_textview"
                android:fontFamily="@font/robotoslab_bold"
                android:textSize="16sp"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="25dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5"
                app:layout_constraintEnd_toEndOf="parent">


                <LinearLayout
                    android:id="@+id/linearlayout1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:weightSum="3"
                    android:visibility="visible"
                    tools:ignore="MissingConstraints">


                    <Button
                        android:id="@+id/button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/robotoslab_bold"
                        android:text="@string/video"
                        style="@style/custom_buttons"
                        android:textSize="18sp"
                        tools:ignore="VisualLintButtonSize" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        style="@style/custom_textview"
                        android:text="@string/or"
                        android:fontFamily="@font/robotoslab_bold"
                        android:textSize="18sp"
                        android:gravity="center"/>

                    <Button
                        android:id="@+id/button2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/audio"
                        style="@style/custom_buttons"
                        android:fontFamily="@font/robotoslab_bold"
                        android:textSize="18sp"
                        tools:ignore="VisualLintButtonSize" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/downloading"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:gravity="center_horizontal"
                    app:layout_constraintTop_toBottomOf="@+id/linearlayout1"
                    android:layout_marginBottom="30dp"
                    android:orientation="vertical"
                    android:visibility="invisible">
                    <ProgressBar
                        android:id="@+id/progressBar2"
                        style="?android:attr/progressBarStyleHorizontal"
                        android:layout_width="match_parent"
                        android:layout_margin="10dp"
                        android:progressTint="@color/red"
                        android:backgroundTint="@color/gray"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/progress_p"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        style="@style/custom_textview"
                        android:fontFamily="@font/robotoslab_bold"/>


                    <Button
                        android:id="@+id/button3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/cancel"
                        style="@style/custom_buttons"
                        android:fontFamily="@font/robotoslab_bold"
                        android:textSize="18sp"
                        android:layout_margin="10dp"
                        android:layout_marginTop="40dp"/>
                </LinearLayout>
                <ScrollView
                    android:id="@+id/scrollView"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_margin="10dp"
                    android:fillViewport="true"
                    android:minHeight="250dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/linearlayout1"
                    app:layout_constraintBottom_toBottomOf="parent"
                    tools:ignore="NestedScrolling,SpeakableTextPresentCheck">

                    <LinearLayout
                        android:id="@+id/select_list"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        tools:ignore="UselessLeaf">

                    </LinearLayout>
                </ScrollView>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/prgress_"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:foregroundTint="@color/red"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>